--- a/local_rmd_nbooks/m2_QC_pp_all.Rmd
+++ b/local_rmd_nbooks/m2_QC_pp_all.Rmd
@@ -156,22 +156,22 @@ all_msc_anotd_preQC <- all_msc_anotd_preQC %>% .[sample_id_lst]
 
 ```{r, warning=FALSE, message=FALSE}
 ##Seurat UMAP
-map(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T))
+imap(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T) + labs(title = .y))
 ```
 
 
 ```{r, warning=FALSE, message=FALSE}
 ##Seurat UMAP
-map(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T))
+imap(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T)+ labs(title = .y))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
 ##Seurat UMAP
-map(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), group.by = "StagePrelimC", label = T))
+imap(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), group.by = "StagePrelimC", label = T)+ labs(title = .y))
 ```
 
 ```{r, fig.height = 15, fig.width = 15}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 gn_lc <- rep(600, length(sample_id_lst))
 ugn_lc <- rep(list(NULL), length(sample_id_lst))
 nc_lst <- rep("nCount_RNA", length(sample_id_lst))
@@ -188,7 +188,7 @@ vp_fn <- function(seu_lst = all_msc_anotd_preQC, gnc_lst = gn_lc, ugnc_lst= ugn_
 ```
 
 ```{r, fig.height = 15, fig.width = 15}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 vp_fn(seu_lst = all_msc_anotd_preQC, gnc_lst = gn_lc, seu_thresh = 1000, ftr = nc_lst, grp = "StagePrelimC", ptsz = 0.01)
 
 ```
@@ -202,24 +202,6 @@ vp_fn(seu_lst = all_msc_anotd_preQC, gnc_lst = gn_lc, seu_thresh = 100000, ftr =
 ```
 
 
-```{r, fig.height = 15, fig.width = 15}
-gn_lc <- rep(300, length(sample_id_lst))
-vp_fn(seu_lst = all_msc_anotd_preQC, gnc_lst = gn_lc, seu_thresh = 800, ftr = nf_lst, grp = "StagePrelimC", ptsz = 0.01)
-
-```
-
-
-```{r, fig.height = 15, fig.width = 15}
-gn_lc <- rep(600, length(sample_id_lst))
-vp_fn(seu_lst = all_msc_anotd_preQC, gnc_lst = gn_lc, seu_thresh = 1000000, ftr = nc_lst, grp = "StagePrelimC", ptsz = 0.0)
-
-```
-
-```{r, fig.height = 15, fig.width = 15}
-gn_lc <- rep(550, length(sample_id_lst))
-vp_fn(seu_lst = all_msc_anotd_preQC, gnc_lst = gn_lc, seu_thresh = 2000, ftr = nc_lst, grp = "StagePrelimC", ptsz = 0.0)
-
-```
 
 ```{r, fig.height = 15, fig.width = 15}
 gn_lc <- rep(600, length(sample_id_lst))
@@ -233,7 +215,7 @@ vp_fn(seu_lst = all_msc_anotd_preQC, gnc_lst = gn_lc, seu_thresh = 1000, ftr = n
 
 #### Violin plots
 ```{r, fig.height = 5, fig.width = 15}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 gn_lc <- rep(550, length(sample_id_lst))
 
 all_mdata <- map(all_msc_anotd_preQC, ~.@meta.data) %>% 
@@ -254,7 +236,7 @@ all_mdata %>%
 
 
 ```{r, fig.height = 15, fig.width = 15}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 gn_lc <- rep(300, length(sample_id_lst))
 
 vp_fn(seu_lst = all_msc_anotd_preQC, gnc_lst = gn_lc, seu_thresh = 800, ftr = nf_lst, grp = NULL, ptsz = 0.01)
@@ -263,7 +245,7 @@ vp_fn(seu_lst = all_msc_anotd_preQC, gnc_lst = gn_lc, seu_thresh = 800, ftr = nf
 ```
 
 ```{r, fig.height = 10, fig.width = 15}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 # rna_lc <- c(530, 600, 530, 700, 600)
 rna_lc <- rep(600, length(sample_id_lst))
 # rna_uc <- c(7500, 13000, 24000, 40000, 17000)
@@ -303,7 +285,7 @@ vp_fn(seu_lst = rep(all_msc_anotd_preQC, 2), gnc_lst = lc_lst, ugnc_lst = uc_lst
 
 #### Violin plots
 ```{r, fig.height = 4.5, fig.width = 12}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 md_don <- map(all_msc_anotd_preQC, ~.@meta.data #%>% 
                        # mutate(across(c(sim_lab1, sim_lab2), as.numeric))
                      ) %>% 
@@ -320,7 +302,7 @@ gh_df <- map( c("rna_uci","gn_uci", "rna_lci","gn_lci"), ~{
 
 
 ```{r, fig.height = 4.5, fig.width = 12}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 
 fct_theme <- theme(text=element_text(size=14),
         axis.text=element_text(size=20), 
@@ -370,7 +352,7 @@ viol_cut_off_lst
 
 
 ```{r, fig.height = 7, fig.width = 12}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 
 
 viol_cut_off <-pmap(list(c('nCount_RNA', 'nFeature_RNA'), c('Transcript', 'Gene'), gh_df[c("rna_lci","gn_lci")], gh_df[c("rna_uci","gn_uci")]), ~{
@@ -401,24 +383,25 @@ viol_cut_off
 
 #### Correlation between gene count and transcript count {.tabset}
 ```{r, results='asis'}
+std_theme <- theme(axis.text=element_text(size=18), 
+            axis.title=element_text(size=18,face="bold"), 
+            legend.text = element_text(size=22), 
+            legend.title = element_text(size=22,face="bold"))
 
 gh_df_v <- map(gh_df, deframe)
 
 # cat('## Visualize field parasites {.tabset}   \n')
-list(all_msc_anotd_preQC,  sample_id_lst, gh_df_v[[c("rna_lci")]] , gh_df_v[[c("rna_uci")]], gh_df_v[[c("gn_lci")]], gh_df_v[[c("gn_uci")]])  %>% 
+list(all_msc_anotd_preQC,  sample_id_lst, gh_df_v[[c("rna_lci")]] , gh_df_v[[c("rna_uci")]], gh_df_v[[c("gn_lci")]], gh_df_v[[c("gn_uci")]], names(all_msc_anotd_preQC))  %>% 
   purrr::pmap(.,~{
     # create tabset for each group 
     cat('##### ',..3,'   \n')
     p <- FeatureScatter(., feature1 = "nCount_RNA", feature2 =  "nFeature_RNA" , pt.size = 0.01)+ 
+      labs(title = ..7)+
       geom_vline(xintercept = ..3) +
       geom_vline(xintercept = ..4) +
       geom_hline(yintercept = ..5) +
       geom_hline(yintercept = ..6) +
-      theme(axis.text=element_text(size=18), 
-            axis.title=element_text(size=18,face="bold"), 
-            legend.text = element_text(size=22), 
-            legend.title = element_text(size=22,face="bold"),
-            plot.title = element_blank())
+      std_theme
     print(p)
     cat('\n')
     cat("\n")
@@ -467,7 +450,9 @@ all_msc_anotd_preQC <- list(all_msc_anotd_preQC, mt_avg_exp) %>%
 
 ```{r, warning=FALSE, message=FALSE}
 
-mt_filt <-list(rep(0.4, length(sample_name)))
+# mt_filt <-list(rep(0.4, length(sample_name)))
+# mt_filt <- c("MSC33" = 0.5, "MSC48" = 0.25, "MSC49" = 0.4, "MSC55" = 0.4, "MSC60" = 0.3,  "MSC66" = 0.4, "MSC38"=0.4, "MSC40" = 0.5, "MSC50_MACS" = 0.6, "MSC53" = 0.4, "MSC57" = 0.4, "MSC24" = 0.6, "MSC37" = 0.2, "MSC39" = 0.2, "MSC45" = 0.25, "MSC50_SLO" = 0.6, "MSC54" = 0.4, "MSC67" = 0.4, "MSC68" = 0.2, "MSC70" = 0.25)
+mt_filt <- c("MSC33" = 0.5, "MSC48" = 0.25, "MSC49" = 0.4, "MSC55" = 0.4, "MSC60" = 0.3,  "MSC66" = 0.4, "MSC40" = 0.5, "MSC50_MACS" = 0.6, "MSC53" = 0.4, "MSC57" = 0.4, "MSC24" = 0.6, "MSC37" = 0.2, "MSC39" = 0.2, "MSC45" = 0.25, "MSC50_SLO" = 0.6, "MSC54" = 0.4, "MSC67" = 0.4, "MSC68" = 0.2, "MSC70" = 0.25)
 ```
 
 
@@ -475,19 +460,14 @@ Visualization of proportion of mitochondrial genes and ncount
 
 ```{r, results='asis'}
 # cat('## Visualize field parasites {.tabset}   \n')
-list(all_msc_anotd_preQC, mt_filt, sample_id_lst)  %>% 
+list(all_msc_anotd_preQC, mt_filt, sample_id_lst, names(all_msc_anotd_preQC))  %>% 
   purrr::pmap(.,~{
-    # create tabset for each group 
-    cat('##### ',..3,'   \n')
+
     p <- FeatureScatter(..1, feature1 = "nCount_RNA", feature2 = "percent.mt", pt.size = 1)+ 
       geom_hline(yintercept = ..2)  +
-      theme(axis.text=element_text(size=18), 
-            axis.title=element_text(size=18,face="bold"), 
-            legend.text = element_text(size=22), 
-            legend.title = element_text(size=22,face="bold"),
-            plot.title = element_blank())
-    print(p)
-    cat('\n')
+      labs(title = ..4)+
+      std_theme
+
     
     # p2 <- FeatureScatter(..1, feature1 = "nCount_RNA", feature2 = "mt_gns_avg", pt.size = 1)+ 
     #   geom_hline(yintercept = ..2)  +
@@ -497,8 +477,6 @@ list(all_msc_anotd_preQC, mt_filt, sample_id_lst)  %>%
     #         legend.title = element_text(size=22,face="bold"),
     #         plot.title = element_blank())
     # print(p2)
-    cat('\n')
-    cat("\n")
   })
 
 ```
@@ -515,7 +493,7 @@ list(all_msc_anotd_preQC, mt_filt, sample_id_lst)  %>%
 # 
 # # old_seurat_clusters <-  all_msc_anotd_preQC %>% map(., ~.x@meta.data %>% dplyr::select(seurat_clusters) %>% rename('old_seu_cluster' = seurat_clusters))
 
-map(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T))
+imap(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T) + labs(title = .y))
 ```
 
 ```{r,  fig.width = 6, fig.height = 4, results='asis'}
@@ -532,16 +510,11 @@ raw_umap <- list(all_msc_anotd_preQC, sample_id_lst)  %>%
     cat('nfeature \n')
     p = DimPlot(., reduction = "umap", , pt.size = 1,  label = T, repel = T, label.size = 4 ) +
   scale_color_manual(name= 'Cluster', values = cluster_cols) +
+      labs(title = ..2)+
       theme_void()+
-      theme(#axis.text=element_text(size=18), 
-            #axis.title=element_text(size=18,face="bold"), 
-            axis.text=element_blank(), 
+      theme(axis.text=element_blank(), 
             axis.title=element_blank(),
-            # title = element_text(size=18,face="bold"),
-            title = element_blank()#,
-            # aspect.ratio = 1/1,
-            ) + 
-      # guides(colour = guide_legend(nrow = 7, override.aes = list(size = 5))) ++
+            title = element_blank()) + 
     guides(color = F, x= trunc_axis, y= trunc_axis)+
   theme(axis.line = element_line(arrow = arrow(angle = 20, length = unit(0.15, "inches"), ends = "last", type = "closed"), color = 'black'),
         axis.title.x = element_text(hjust = 0, size=14, face = 'bold'),
@@ -556,6 +529,7 @@ raw_umap <- list(all_msc_anotd_preQC, sample_id_lst)  %>%
     cat("\n")
   })
 
+raw_umap
 ```
 
 ```{r}
@@ -586,7 +560,7 @@ all_msc_anotd_preQC <- pmap(list(all_msc_anotd_preQC, rep('nFeature_RNA', length
 ```
 
 ```{r, fig.height = 4.5, fig.width = 12}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 md_don_cl <- map(all_msc_anotd_preQC, ~.@meta.data #%>% 
                        # mutate(across(c(sim_lab1, sim_lab2), as.numeric))
                      ) %>% 
@@ -605,25 +579,18 @@ gh_df_cl <- map( c("rna_uci","gn_uci", "rna_lci","gn_lci"), ~{
 
 
 ```{r, fig.height = 8, fig.width = 12}
-# options(repr.plot.width=32, repr.plot.height=7)
 
 my21_qc_vln_fn <- function(clust_var = "StagePrelimC", clust_cols, ci_sufx = "_stg" ) {
   pmap(list(c('nCount_RNA', 'nFeature_RNA'), c('Transcript', 'Gene'), paste0(c("rna_lci_cl","gn_lci_cl"), ci_sufx), paste0(c("rna_uci_cl","gn_uci_cl"), ci_sufx)), ~{
   
 md_don_cl %>% 
-  filter(donor != "MSC1272") %>%
-    # mutate(across(seurat_clusters, as.numeric)) %>%
-  # ggplot(aes(x = seurat_clusters, y = !!rlang::sym(..1)/1000, color = seurat_clusters)) +
   ggplot(aes(x = !!rlang::sym(clust_var), y = !!rlang::sym(..1)/1000, color = !!rlang::sym(clust_var))) +
   scale_color_manual(values = clust_cols) +
   theme_classic() +
   geom_violin(drop = F) +
   ggforce::geom_sina(size = 0.1,  alpha = 0.5)+
-  # geom_boxplot()+
   facet_wrap(donor ~., nrow = 2, scales = "free_x")+
   labs(y = "Gene count (X 1000)")+
-  # geom_hline(aes(yintercept = cut_off/1000), ..3) +
-  # geom_hline(aes(yintercept = cut_off/1000), ..4) +
   geom_segment(aes(x=as.numeric(!!rlang::sym(clust_var))-0.3, xend=as.numeric(!!rlang::sym(clust_var))+0.3,
                        y = !!rlang::sym(..3)/1000, yend= !!rlang::sym(..3)/1000 ), inherit.aes=F, color="orange", size=0.5)+
   geom_segment(aes(x=as.numeric(!!rlang::sym(clust_var))-0.3, xend=as.numeric(!!rlang::sym(clust_var))+0.3,
@@ -641,7 +608,7 @@ md_don_cl %>%
 
 
 ```{r, fig.height = 8, fig.width = 12}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 
 my21_qc_vln_fn(clust_var = "StagePrelimC", clust_cols = sp_fld_colors, ci_sufx = "_stg" ) 
 
@@ -649,7 +616,7 @@ my21_qc_vln_fn(clust_var = "StagePrelimC", clust_cols = sp_fld_colors, ci_sufx =
 
 
 ```{r, fig.height = 8, fig.width = 12}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 
 my21_qc_vln_fn(clust_var = "seurat_clusters", clust_cols = cluster_cols, ci_sufx = "_seu")  
 
@@ -798,14 +765,14 @@ strn_knee_p <- list(all_msc_anotd_preQC, sample_id_lst, 1:length(all_msc_anotd_p
 
 ```{r, warning=FALSE, message=FALSE}
 
-map(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T))
+imap(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T) + labs(title = .y))
 
 ```
 
 
 ```{r, warning=FALSE, message=FALSE}
 
-map(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T, cells.highlight = .x@meta.data %>% filter(strain_gt == "Doublet") %>% row.names()))
+imap(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T, cells.highlight = .x@meta.data %>% filter(strain_gt == "Doublet") %>% row.names()) + labs(title = .y))
 
 ```
 
@@ -820,33 +787,9 @@ for (i in names(all_msc_anotd_preQC)) {
 
 
 FARM CODE
-```{r, eval=F}
+```{r, eval=T}
 # write out seurat object files for normalization processing in farm
 imap(all_msc_anotd_preQC, ~saveRDS(.x, paste0("data/processed/Pf/",.y,"/seu_obj/seu_norm_anotd.RDS")))
-```
-
-```{r, eval=F}
-##write out for normalization processing in farm
-
-# for (i in 1:length(sample_name)) {
-# # for (i in 32:33) {
-#   
-#   ##Transfers
-#   ##souporcell genotyping files
-#   saveRDS(all_msc_anotd_preQC[[sample_name[i]]],
-#     paste0('data/processed/Pf/', sample_name[i], '/seu_obj/msc_anotd.RDS')
-#     )
-#   
-# }
-
-
-```
-
-```{r, eval=F}
-##write out for normalization processing in farm
-
-rm(all_msc_anotd_preQC)
-
 ```
 
 !!!NB - FARM CODE - DONT DELETE
@@ -876,50 +819,28 @@ all_msc_anotd_ysct <- list.files("data/processed/", pattern = "seu_sctnorm_anotd
 
 ```
 
-```{r}
-# saveRDS(all_msc_anotd_ysct, "data/processed/Pf/all_msc_anotd_ysct.RDS")
-```
-
-```{r, results='asis', eval=FALSE}
-# cat('## Visualize field parasites {.tabset}   \n')
-# list(all_msc_ysct, sample_id_lst)  %>%
-#   purrr::pmap(.,~{
-#     # create tabset for each group
-#     cat('###### ',..2,'   \n')
-#     DimPlot(., group.by = 'strain_gt', label = T) %>% print()
-#     DimPlot(., group.by = 'seurat_clusters', label = T) %>% print()
-#     DimPlot(., cells.highlight = .@meta.data %>% filter(strain_gt=='Doublet') %>% row.names(), sizes.highlight = 1) %>% print()
-#     # FeaturePlot(., features = 'percent.mt') %>% print()
-#     # print(p2)
-#     cat('\n ')
-#     cat("\n")
-#   })
-
-```
-
-
 ```{r, warning=FALSE, message=FALSE}
 
-map(all_msc_anotd_ysct, ~DimPlot(.x, dims = c(1,2), label = T))
+imap(all_msc_anotd_ysct, ~DimPlot(.x, dims = c(1,2), label = T) + labs(title = .y))
 
 ```
 
 Visualize low clusters
 ```{r, warning=FALSE, message=FALSE}
 
-map(all_msc_anotd_ysct, ~DimPlot(.x, dims = c(1,2), label = T, cells.highlight = .x@meta.data %>% filter(strain_gt == "Doublet") %>% row.names()))
+imap(all_msc_anotd_ysct, ~DimPlot(.x, dims = c(1,2), label = T, cells.highlight = .x@meta.data %>% filter(strain_gt == "Doublet") %>% row.names()) + labs(title = .y))
 
 ```
 
 ```{r, warning=FALSE, message=FALSE}
 
-map(all_msc_anotd_ysct, ~DimPlot(.x, dims = c(1,2), label = T, group.by = "StagePrelimC"))
+imap(all_msc_anotd_ysct, ~DimPlot(.x, dims = c(1,2), label = T, group.by = "StagePrelimC") + labs(title = .y))
 
 ```
 
 ```{r, warning=FALSE, message=FALSE}
 
-map(all_msc_anotd_ysct, ~DimPlot(.x, dims = c(1,2), label = T, cells.highlight = .x@meta.data %>% filter(strain_gt == "Negative") %>% row.names()))
+imap(all_msc_anotd_ysct, ~DimPlot(.x, dims = c(1,2), label = T, cells.highlight = .x@meta.data %>% filter(strain_gt == "Negative") %>% row.names()) + labs(title = .y))
 
 ```
 
@@ -964,7 +885,7 @@ list(strn_knee_p, sample_id_lst)  %>%
 
 #### Violin plots
 ```{r}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 
 md_don_all <- map(all_msc_anotd_ysct, ~.@meta.data #%>% 
                        # mutate(across(c(sim_lab1, sim_lab2), as.numeric))
@@ -983,17 +904,15 @@ md_don_all %>%
       geom_hline(yintercept = log10(..2)) + 
       theme_classic() +
       scale_color_manual(name= 'Donor', values = donor_cols) +
-      theme(axis.text=element_text(size=20), 
-            axis.title=element_text(size=20,face="bold"), 
-            legend.text = element_text(size=20), 
-            legend.title = element_text(size=20,face="bold"))+
+      std_theme+
       labs(x= 'Cell rank (log10)', y= paste0(..3, ' count\n(log10)'))
 })
+
 ```
 
 #### Violin plots
 ```{r, fig.height = 4, fig.width = 16}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 
 pmap(list(c('nCount_RNA', 'nFeature_RNA'), c(520, 250), c('Transcript', 'Gene')), ~{
 md_don_all %>% 
@@ -1012,7 +931,7 @@ md_don_all %>%
 
 #### Violin plots
 ```{r, fig.height = 7, fig.width = 16}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 
 pmap(list(c('nCount_RNA', 'nFeature_RNA'), c(520, 250), c('Transcript', 'Gene')), ~{
 md_don_all %>% 
@@ -1037,7 +956,7 @@ md_don_all %>%
 
 #### Violin plots
 ```{r, fig.height = 7, fig.width = 16}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 
 pmap(list(c('nCount_RNA', 'nFeature_RNA'), c(520, 250), c('Transcript', 'Gene')), ~{
 md_don_all %>% 
@@ -1060,7 +979,7 @@ md_don_all %>%
 ```
 
 ```{r, fig.height = 7, fig.width = 16}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 
 pmap(list(c('nCount_RNA', 'nFeature_RNA'), c(520, 300), c('Transcript', 'Gene')), ~{
 md_don_all %>% 
@@ -1085,7 +1004,7 @@ md_don_all %>%
 
 #### Violin plots
 ```{r, fig.height = 4.5, fig.width = 12}
-# options(repr.plot.width=32, repr.plot.height=7)
+
 
 pmap(list(c('nCount_RNA', 'nFeature_RNA'), c(520, 250), c('Transcript', 'Gene')), ~{
 md_don_all %>% 
@@ -1359,7 +1278,8 @@ all_msc_filt <- map(all_msc_anotd_ysct, ~subset(.x, nFeature_RNA > gn_lci_cl_seu
 ```{r}
 
 ## filter based on gene/transcript count
-rm(all_msc_anotd_ysct)
+# gogogog()
+# rm(all_msc_anotd_ysct)
 ```
 
 Remove those categorised as negative by Souporcell
@@ -1389,11 +1309,32 @@ Remove those categorised as negative by Souporcell
 
 ```
 
+```{r, results='asis'}
+pmap(list(all_msc_filt, mt_filt, names(all_msc_filt)), ~{
+    FeatureScatter(..1, feature1 = "nCount_RNA", feature2 = "percent.mt", group.by = "StagePrelimC", pt.size = 1)+ 
+      scale_color_manual(values = sp_fld_colors) +
+      geom_hline(yintercept = ..2)  +
+      labs(title = ..3) +
+      std_theme
 
+  })
 
+```
 ```{r}
 map2(all_msc_filt, mt_filt, ~.@meta.data %>% dplyr::count(percent.mt>.y ))
 ```
+
+```{r}
+## !!!!!!NB -CONSIDER FORE REMOVAL LATER
+#filter out cells with high mitochondrial count
+all_msc_filt <- all_msc_filt %>%
+  map2(., mt_filt, ~.x  %>%
+         subset(., percent.mt < .y )
+  )
+
+```
+
+
 
 ## !!!!!!NB - RECONSIDER FILTRATION PROPERLY LATER
 ```{r}
@@ -1407,17 +1348,12 @@ all_msc_filt <- all_msc_filt %>%
 ```
 
 ```{r, results='asis'}
-# cat('## Visualize field parasites {.tabset}   \n')
-list(all_msc_filt, mt_filt, sample_id_lst)  %>% 
-  purrr::pmap(.,~{
-
-    FeatureScatter(..1, feature1 = "nCount_RNA", feature2 = "percent.mt", pt.size = 1)+ 
+pmap(list(all_msc_filt, mt_filt, names(all_msc_filt)), ~{
+    FeatureScatter(..1, feature1 = "nCount_RNA", feature2 = "percent.mt", group.by = "StagePrelimC", pt.size = 1)+ 
+      scale_color_manual(values = sp_fld_colors) +
       geom_hline(yintercept = ..2)  +
-      theme(axis.text=element_text(size=18), 
-            axis.title=element_text(size=18,face="bold"), 
-            legend.text = element_text(size=22), 
-            legend.title = element_text(size=22,face="bold"),
-            plot.title = element_blank())
+      labs(title = ..3) +
+      std_theme
 
   })
 
@@ -1428,7 +1364,7 @@ list(all_msc_filt, mt_filt, sample_id_lst)  %>%
 
 map(all_msc_filt, ~{
   .x@meta.data %>%
-    count(StagePrelimC, StagePrelimCAll)
+    count(StagePrelimC, StagePrelimC)
     
     })
 
@@ -1436,13 +1372,14 @@ map(all_msc_filt, ~{
 
 FARM CODE
 
-```{r, eval=F}
+```{r, eval=T}
 ## write out seurat bpcells object files for normalization processing in farm
 imap(all_msc_filt, ~saveRDS(.x, paste0("data/processed/Pf/",.y,"/seu_obj/filt_seu_sct.RDS")))
 ```
 
 !!!NB - FARM CODE - DONT DELETE
 ```{r, eval=F}
+gogo()
 ## Run SNORM on farm like below
 # nextflow run submsn_seu_norm.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_stdnorm.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/seu_obj/filt_seu_sct.RDS" --o_file_name "filt_seu_norm.RDS" --umap_name "UMAP_F_NORM" --hvg 500 --cluster_resoln 0.1 --resume
 ```
